examples/test/testpolicy14533.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14533
  namespace: namespace134
spec:
  podSelector:
    matchLabels:
      key40: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value34
          key28: value39
          key14: value33
      podSelector:
        matchLabels:
          key36: value12
